2023-05-16 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Release aide 0.18.3

2023-05-10 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Handle readlink() errors

2023-04-07 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Release aide 0.18.2

2023-04-03 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add another missing lock for tree operations

2023-04-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add missing lock for tree operations during file system scan

2023-03-08 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add warning if rules contain not compiled-in attributes (closes: #153)

2023-03-04 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Release aide 0.18.1

2023-02-19 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* README: update expiration date of signing key

2023-02-18 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix segfault when using --dry-init

2023-02-14 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix handling of empty growing files

2023-02-06  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Release aide 0.18

2023-02-05 Marc Haber <mh+debian-packages@zugschlus.de>
	* Update aide.conf.5 manual page

2023-01-22 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Update man pages
	* Minor code cleanup
	* Improve some logging

2023-01-21 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Adjust some log messages
	* Add SECURITY.md to EXTRA_DIST
	* Remove mmap support for hashsum calculation
	* Add warning if rule tree is empty
	* Update --help message
	* Update --version message

2023-01-20 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Limit hashsum calculation of growing files to stat size
	* Refactor size mismatch warning during hash calculation
	* Ensure size is always written to database if growing attribute is set

2023-01-19 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix hash calculation for growing files

2023-01-18 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Also ignore bcount attribute for compressed files
