@@ -1,3 +1,6 @@
+2023-06-03 Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Remove strerror() calls from thread log messages
+
 2023-05-16 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Release aide 0.18.3
 
